--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "node": "~12.11.1"
   },
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "start": "node index.js",
     "start-dev": "webpack -w & nodemon index.js",
@@ -20,13 +19,29 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
     "morgan": "^1.10.0",
+    "style-loader": "^2.0.0",
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
+    "connect-session-sequelize": "^7.0.4",
+    "crypto": "^1.0.1",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "lodash": "^4.17.20",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.0.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "sequelize": "^6.3.5",
     "webpack": "^5.11.1"
   }
 }
